# Galvaan

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: logging.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/github/: mod.rs
src/package_manager/: apt.rs  dnf.rs  mod.rs  pacman.rs  zypper.rs
tests/: container_integration.rs
tests/integration/: test_in_container.sh
tests/integration/distros/: Containerfile.archlinux  Containerfile.fedora  Containerfile.opensuse-tumbleweed  Containerfile.ubuntu
